@@ -149,4 +149,5 @@ Continuing from 0.5.0
     will provide an array version of object
   * Collections objects will now return list on listAll/1 
   * Public TODO list of internal things that can be updated,
+  * php-bandwidth-examples requires toArray/0 added to collections 
  
